# Study_Learning-Microsoft-Foundry

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
FoundryIQ/: config.py  fiq_agent.py
GettingStarted/: config.py
GettingStarted/Agents/: agent.py  websearch_agent.py
GettingStarted/OPAI_Chat/: opai_chat.py
MAF/: config.py
MAF/Cloud/: simple.py
MAF/Test/: exe.js  js.py  new_dom.js  new_dom_2.js  pw-mcp-wrapper.py  test0.py  test_pw.py  test_stateful_tool.py  tools.py
MMA/: config.py  mma-agent.py
PII/: config.py  pii-language-agnet.py
RAG/: config.py  mmr_rag.py
Workflows/: config.py  food-recipe.py
